# mcphee

./: .gitignore  CHANGELOG.md  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml
examples/hello-world-mcp/: README.md  pyproject.toml  server.py
src/mcphee/: __init__.py  __main__.py  cli.py  connection.py  display.py  profiles.py  shell.py
tests/: conftest.py  test_cli.py  test_connection.py  test_display.py  test_profiles.py  test_shell.py
