[project]
name = "mcphee"
version = "0.1.0"
description = "Interactive MCP client CLI — connect to any MCP server via stdio, SSE, or HTTP"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "David Gwartney", email = "david.gwartney@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "cli", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.3.2",
    "fastmcp>=3.2.4",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
]

[project.scripts]
mcphee = "mcphee.cli:mcphee"

[project.urls]
Homepage = "https://github.com/dgwartney/mcphee"
Repository = "https://github.com/dgwartney/mcphee"
Issues = "https://github.com/dgwartney/mcphee/issues"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/mcphee"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
